# cai

./: .gitignore  LICENSE  Makefile  README.md  api.py  cai.py  config.json  generate_log.py  pyproject.toml  requirements.txt  tools.py
examples/: example.py
examples/harnesses/: _helpers.py  bug_fix.py  code_review.py  context_and_execute.py  document.py  explain.py  feature.py  haystack_challenge.py  maze_challenge.py  migrate.py  multi_task.py  refactor.py  sample.py  security_audit.py  smali_xref.py  smali_xref_expand.py  streaming.py  test_writer.py  web_search.py  web_search_fetch.py
harnesses/: README.md  bug-fix.harness.cai  code-review.harness.cai  context-and-execute.harness.cai  document.harness.cai  explain.harness.cai  feature.harness.cai  haystack-challenge.harness.cai  maze-challenge.harness.cai  migrate.harness.cai  multi-task.harness.cai  refactor.harness.cai  security-audit.harness.cai  smali-xref-expand.harness.cai  smali-xref.harness.cai  test-writer.harness.cai  web-search-fetch.harness.cai  web-search.harness.cai
src/cai/: __init__.py  __main__.py  adb_tools.py  agent.py  agents_registry.py  api.py  channel.py  cli.py  commands.py  config.py  core.py  environment.py  events.py  (+34 more)
tests/: conftest.py  test_allowed_paths.py  test_api.py  test_attach.py  test_broadcast_resilience.py  test_cli.py  test_config.py  test_environment.py  test_extend.py  test_fs_binary.py  test_gate.py  test_history.py  test_interrupt.py  test_lines.py  test_mcp_servers.py  test_python_render.py  test_python_tool.py  test_registries.py  test_scratch.py  test_screen_spacing.py  test_screenui.py  test_selected_dispatch.py  test_steer.py  test_strict.py  test_subagent.py  test_tail.py  test_userconfig.py  test_watch.py  test_widgets.py  test_wire.py  test_wired_agent.py
(+49 files in other folders)
