[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "cai"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.32",
    "mcp>=1.26",
    "frida>=17.0",
    "tree-sitter>=0.25",
    "tree-sitter-language-pack>=0.13",
    "argcomplete>=3.0",
]

[project.scripts]
cai = "cai.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
cai = ["prompts/*.md"]
